[project]
name = "lucio"
version = "0.1.0"
description = "Lucio AI Pipeline - Document processing and semantic search"
dependencies = [
    "click",
    "numpy",
    "pymupdf",
    "python-docx",
    "pandas",
    "openpyxl"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
